front-end <-> server-side API 연결

--- a/ui-toybox-app/ionic.config.json
+++ b/ui-toybox-app/ionic.config.json
@@ -4,5 +4,10 @@
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "proxies": [
+    {
+      "path": "/toybox/backend",
+      "proxyUrl": "http://localhost:28380/toybox/backend/"
+    }]
 }
